[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "mp-api"
authors = [
    { name = "The Materials Project", email = "feedback@materialsproject.org" },
]
description = "API Client for the Materials Project"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "modified BSD" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "setuptools",
    "msgpack",
    "pymatgen>=2022.3.7",
    "typing-extensions>=3.7.4.1",
    "requests>=2.23.0",
    "monty>=2021.3.12",
    "emmet-core>=0.54.0",
]
dynamic = ["version"]

[project.optional-dependencies]
all = ["emmet-core[all]>=0.54.0", "custodian", "mpcontribs-client", "boto3"]
test = [
    "pre-commit",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
    "flake8",
    "pycodestyle",
    "mypy",
    "mypy-extensions",
    "typing-extensions",
    "types-pkg_resources",
    "types-requests",
]

[tool.setuptools.packages.find]
include = ["mp_api*"]
namespaces = true

[tool.setuptools_scm]
